style overhaul and mobile responsiveness

--- a/public/scss/_settings.scss
+++ b/public/scss/_settings.scss
@@ -69,7 +69,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
+  primary: #7088b5,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
@@ -107,8 +107,8 @@ $print-hrefs: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
-  large: 1024px,
+  medium: 891px,
+  large: 1200px,
   xlarge: 1200px,
   xxlarge: 1440px,
 );
