--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
         <h1>Contact Us</h1>
     </div>
     <div id="contactImage">
-        <img src="/images/ContactImageSM.jpg" alt="">
+        <img src="/images/highline_contact.jpg" alt="">
     </div>
 </div>
 <script>
