--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     </div>
     <div id="homeImageBox">
         <div id="homeImg">
-            <img src="/images/HomeImage.jpg" alt="">
+            <img src="/images/highline_home.jpg" alt="">
         </div>
     </div>
     <div id="homeBio">
