--- a/views/lulu.ejs
+++ b/views/lulu.ejs
@@ -15,47 +15,131 @@
             </h3>
         </div>
         <div class="dogText dogText2 mainStyle">
-                <h1>About Lulu</h1>
-                <p>
-                    Lulu is my heart dog and I couldn’t imagine life without this sassy, biddable and brilliant girl who
-                    lives life to the fullest and excels at what ever I ask of her. Lulu followed in her mother Allie’s
-                    footsteps with an extremely successful conformation career. She took her first four and five point
-                    ASCA majors out of the 9-12 class going BOW both times and a BOS over a nice group of specials owner
-                    handled. She won the huge 9-12 puppy class three times at nationals and thrilled us by taking RWB at
-                    one of the pre-shows beautifully handled by good friend kristina Churchill. She finished both AKC
-                    and ASCA championships with ease by going BOB in both venues over multiple lovely specials. Not only
-                    is lulu beautifully put together but she is the most talented performance dog I’ve ever had the good
-                    fortune to own. Whether it’s rally, obedience, herding, barn hunt or agility she approaches each
-                    discipline with drive, focus and an abundance of natural talent. Lulu has been tested on livestock
-                    and not surprisingly she shows a ton of natural aptitude, she will start her herding career once she’s
-                    had her first litter.
-                
+            <h1>About Lulu</h1>
+            <p>
+                Lulu is my heart dog and I couldn’t imagine life without this sassy, biddable and brilliant girl who
+                lives life to the fullest and excels at what ever I ask of her. Lulu followed in her mother Allie’s
+                footsteps with an extremely successful conformation career. She took her first four and five point
+                ASCA majors out of the 9-12 class going BOW both times and a BOS over a nice group of specials owner
+                handled. She won the huge 9-12 puppy class three times at nationals and thrilled us by taking RWB at
+                one of the pre-shows beautifully handled by good friend kristina Churchill. She finished both AKC
+                and ASCA championships with ease by going BOB in both venues over multiple lovely specials. Not only
+                is lulu beautifully put together but she is the most talented performance dog I’ve ever had the good
+                fortune to own. Whether it’s rally, obedience, herding, barn hunt or agility she approaches each
+                discipline with drive, focus and an abundance of natural talent. Lulu has been tested on livestock
+                and not surprisingly she shows a ton of natural aptitude, she will start her herding career once she’s
+                had her first litter.
+
                 <br><br>
-                
-                    Lulu out did herself at the ASCA 2019 nationals, even though it was her first time entered in both
-                    excellent and masters rally she took High Combined over some amazing competition in a very stressful
-                    trial environment.</p>
-                    <div class="dogSecondaryImg bottomPad">
-                    <img src="/images/lulu/lulu_main3.jpg" alt="">
-                </div>
-                    <p>
-                    
-                    The sky’s the limit for this girl, we have some lofty goals in our future and I have no doubt that we will achieve them.
+
+                Lulu out did herself at the ASCA 2019 nationals, even though it was her first time entered in both
+                excellent and masters rally she took High Combined over some amazing competition in a very stressful
+                trial environment.</p>
+            <div class="dogSecondaryImg bottomPad">
+                <img src="/images/lulu/lulu_main3.jpg" alt="">
+            </div>
+            <p>
+
+                The sky’s the limit for this girl, we have some lofty goals in our future and I have no doubt that we
+                will achieve them.
 
 
-                </p></div>
-                <div class="sliderBox" data-dog='lulu'>
-                    <div class="slider-for">
+            </p>
+        </div>
+        <div class="sliderBox" data-dog='lulu'>
+            <div class="slider-for">
+                <div><img src="/images/lulu/lulu_slider/lulu_slider0.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider1.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider2.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider3.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider4.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider5.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider6.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider7.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider8.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_slider9.jpg" alt=""></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery1.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery10.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery11.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery12.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery13.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery14.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery15.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery16.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery17.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery18.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery19.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery2.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery20.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery21.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery22.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery23.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery24.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery25.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery26.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery27.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery28.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery3.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery4.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery5.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery6.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div>
+                <div><img src="/images/lulu/lulu_slider/lulu_mainsm.jpg"></div>
+            </div>
+        </div>
+        <div class="sliderNavBox">
+            <div class="slider-nav">
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider0.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider1.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider2.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider3.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider4.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider5.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider6.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider7.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider8.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_slider9.jpg" alt=""></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery1.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery10.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery11.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery12.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery13.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery14.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery15.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery16.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery17.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery18.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery19.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery2.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery20.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery21.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery22.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery23.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery24.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery25.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery26.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery27.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery28.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery3.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery4.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery5.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery6.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div>
+                <div class="slide"><img src="/images/lulu/lulu_slider/lulu_mainsm.jpg"></div>
+            </div>
+        </div>
 
-                        <div><img src="/images/lulu/lulu_slider/lulu_gallery1.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery10.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery11.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery12.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery13.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery14.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery15.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery16.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery17.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery18.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery19.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery2.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery20.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery21.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery22.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery23.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery24.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery25.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery26.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery27.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery28.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery3.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery4.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery5.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery6.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div><div><img src="/images/lulu/lulu_slider/lulu_mainsm.jpg"></div></div>
-                </div>
-                <div class="sliderNavBox">
-                    <div class="slider-nav">
-
-                        <div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery1.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery10.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery11.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery12.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery13.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery14.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery15.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery16.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery17.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery18.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery19.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery2.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery20.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery21.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery22.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery23.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery24.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery25.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery26.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery27.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery28.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery3.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery4.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery5.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery6.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery7.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery8.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_gallery9.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_main2.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_main4.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_main5.jpg"></div><div class="slide"><img src="/images/lulu/lulu_slider/lulu_mainsm.jpg"></div></div>
-                </div>
-            
-            <div class="dogText1 dogText">
+        <div class="dogText1 dogText">
             <h3>
                 <strong>Date of Birth</strong>: March 21st, 2017
                 <br>
@@ -70,15 +154,15 @@
 
 
             </h3>
-            
-            
+
+
         </div>
         <div class="sireDamDiv">
             <div class="sireDamElement">
                 <h1>Sire</h1>
                 <img src="/images/tango/tangosm.jpg" alt="">
                 <h3>
-                    MBIS MBISS GCh. ASCA CH <br><strong>Silverwood's Kiss of Fire at Limelite</strong><br> 
+                    MBIS MBISS GCh. ASCA CH <br><strong>Silverwood's Kiss of Fire at Limelite</strong><br>
                     <br>
                     <a href="http://www.limeliteaussies.com/tango.html"><strong>TANGO</strong></a>
 
@@ -97,7 +181,7 @@
                 </h3>
             </div>
         </div>
-        
+
     </div>
 </div>
 <script src="/js/slider.js">
