--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -67,12 +67,18 @@ h1{
     margin-top: -25px;
     text-align: center;
 }
+#homeImageBox{
+    height: auto;
+}
 #homeImg, #aboutImage, #contactImage{
     display: flex;
     justify-content: center;
     width: 80%;
     margin: auto;
     height: auto;
+    img{
+        
+    }
 }
 #bannerImg{
     img{
