added specific menu support for stupid nub in iphone X^ phones

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -182,6 +182,11 @@ h1{
         @media screen and (max-width:1199px){
         width: 100vw;
         }
+        @media screen and (max-width:440px) and (-webkit-min-device-pixel-ratio: 3) and (min-height : 750px){
+            justify-content: start;
+            padding-left: 30px;
+        }
+        
     }
 #navList{
     display: flex;
