fixed shimmer page scaling issues

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -671,6 +671,17 @@ display: none;
     }
 }   
 }
+.winList{
+    li{
+        @media screen and (max-width: 440px){
+          width: 70%;  
+          margin-left: 40px;
+            
+        }
+        
+
+    }
+}
 
 //orbit
 
