--- a/views/shimmer.ejs
+++ b/views/shimmer.ejs
@@ -35,7 +35,7 @@
                 home with a 4 point Major under SBJ Annette Cyboron. A few months later she picked up 3 point and 4
                 point ASCA majors. 
                 <br><br>
-                2019 ASCA Nationals 15-18 month class (Handler Kat Wallis):
+                <strong>2019 ASCA Nationals 15-18 month class:</strong>  <br>(Handler Kat Wallis)
             </p>
                 <ul class="winList">
                     <li>1st Place Delta ASC pre-show - SBJ Clarissa Shanks</li>
@@ -44,7 +44,8 @@
                     <li>1st Place Nationals - SBJ Laura Shivers</li>
                 </ul>
                 <p>
-                 AKC (Handler Kat Wallis):
+                 <strong>AKC: </strong>
+                 <br>(Handler Kat Wallis)
                 </p>
                 <ul class="winList">
                     <li>RWB to a Major</li>
